Overflow gicchi solved

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
- html {
+ body {
     width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
+    
 }
 
 #hero-img {
@@ -11,6 +12,7 @@ h1, h2{
     margin-bottom: 2.5rem !important; 
     
 }
+
 
 
 
